# volf

./: .gitignore  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mpv_ipc.rs
src/components/: AppSidebar.tsx  Layout.tsx  mpvArgs.tsx
src/components/tabs/: DualModeTab.tsx  HistoryTab.tsx  SearchTab.tsx  SettingsTab.tsx
src/hooks/: useMpvSync.ts  useSettings.ts
src/lib/: utils.ts
src/services/: mpv.ts  sync.ts
src/services/parsers/: base.ts  parsers.ts  rutube.ts  youtube.ts
src/types/: index.ts
src/utils/: config.ts  player.ts
